fix long values overlap issue

--- a/src/multi-selection.scss
+++ b/src/multi-selection.scss
@@ -50,10 +50,13 @@
                     @include background-color(--palette-primary-tint-40, 239, 246, 252);
                 }
                 .ms-Checkbox-text {
+                    white-space: nowrap;
                     @include color(--palette-neutral-100, 0, 0, 0);
                 }
             }
             .checkboxes {
+                overflow: auto;
+                height: 250px;
                 padding: 3px;
             }
             input {
@@ -65,7 +68,6 @@
             @include color(--palette-accent1, 218, 10, 0);
         }
     }
-    
 }
 .ms-Fabric--isFocusVisible .ms-TagItem:focus:after {
     @include border-color(--palette-neutral-100, 0, 0, 0);
